// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPopover Rendering renders correctly 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root LoginPopoverWithStyles-card-2 MuiPaper-rounded"
>
  <ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      error={false}
      fullWidth={true}
      margin="normal"
      required={true}
      variant="outlined"
    >
      <ForwardRef(WithStyles)
        htmlFor="username"
      >
        Username
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        autoFocus={true}
        id="popover-login-username"
        labelWidth={85}
        onChange={[Function]}
        onKeyPress={[Function]}
        value=""
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      error={false}
      fullWidth={true}
      margin="normal"
      required={true}
      variant="outlined"
    >
      <ForwardRef(WithStyles)
        htmlFor="password-confirm"
      >
        Password
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        id="popover-login-password"
        labelWidth={85}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="password"
        value=""
      />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    className="LoginPopoverWithStyles-cardActions-3"
  >
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-submit-6"
      color="primary"
      disabled={false}
      fullWidth={true}
      id="popover-login-submit"
      onClick={[Function]}
      type="button"
      variant="contained"
    >
      Log In
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-signup-5"
      href="#"
      onClick={[MockFunction]}
      variant="body2"
    >
      Don't have an account? Sign Up
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;

exports[`LoginPopover Rendering renders error message if API returns error 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root LoginPopoverWithStyles-card-2 MuiPaper-rounded"
>
  <ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      error={false}
      fullWidth={true}
      margin="normal"
      required={true}
      variant="outlined"
    >
      <ForwardRef(WithStyles)
        htmlFor="username"
      >
        Username
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        autoFocus={true}
        id="popover-login-username"
        labelWidth={85}
        onChange={[Function]}
        onKeyPress={[Function]}
        value=""
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      error={false}
      fullWidth={true}
      margin="normal"
      required={true}
      variant="outlined"
    >
      <ForwardRef(WithStyles)
        htmlFor="password-confirm"
      >
        Password
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        id="popover-login-password"
        labelWidth={85}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="password"
        value=""
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-apiError-1"
      color="error"
      variant="body1"
    >
      oh no!
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    className="LoginPopoverWithStyles-cardActions-3"
  >
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-submit-6"
      color="primary"
      disabled={false}
      fullWidth={true}
      id="popover-login-submit"
      onClick={[Function]}
      type="button"
      variant="contained"
    >
      Log In
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-signup-5"
      href="#"
      onClick={[MockFunction]}
      variant="body2"
    >
      Don't have an account? Sign Up
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;

exports[`LoginPopover Rendering renders with message if user registered 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root LoginPopoverWithStyles-card-2 MuiPaper-rounded"
>
  <ForwardRef(WithStyles)
    className="LoginPopoverWithStyles-cardTitle-4"
    title="Registration Success!"
    titleTypographyProps={
      Object {
        "color": "primary",
      }
    }
  />
  <ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      error={false}
      fullWidth={true}
      margin="normal"
      required={true}
      variant="outlined"
    >
      <ForwardRef(WithStyles)
        htmlFor="username"
      >
        Username
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        autoFocus={true}
        id="popover-login-username"
        labelWidth={85}
        onChange={[Function]}
        onKeyPress={[Function]}
        value=""
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      error={false}
      fullWidth={true}
      margin="normal"
      required={true}
      variant="outlined"
    >
      <ForwardRef(WithStyles)
        htmlFor="password-confirm"
      >
        Password
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        id="popover-login-password"
        labelWidth={85}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="password"
        value=""
      />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    className="LoginPopoverWithStyles-cardActions-3"
  >
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-submit-6"
      color="primary"
      disabled={false}
      fullWidth={true}
      id="popover-login-submit"
      onClick={[Function]}
      type="button"
      variant="contained"
    >
      Log In
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      className="LoginPopoverWithStyles-signup-5"
      href="#"
      onClick={[MockFunction]}
      variant="body2"
    >
      Don't have an account? Sign Up
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;
